# opencode-skills

./: .gitignore  AGENTS.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.opencode/: .gitignore  opencode.json  package.json
.opencode/plans/: 2026-05-05-opencode-setup-comprehensive.md
.opencode/prompts/: build.txt  plan.txt
agents/: analyzer.md  code-quality-reviewer.md  code-reviewer.md  comparator.md  grader.md  implementer.md  interface-reviewer.md  internet-researcher.md  spec-reviewer.md
docs/plans/: 2026-05-07-threatwinds-vision-mcp-server.md
docs/specs/: 2026-05-07-threatwinds-vision-mcp-design.md
mcp_servers/threatwinds_vision/: README.md  __init__.py  analysis_service.py  models.py  server.py
skills/algorithmic-art/: SKILL.md
skills/applying-themes/: SKILL.md
skills/brainstorming/: SKILL.md
skills/brand-guidelines/: SKILL.md
skills/building-accessible-interfaces/: SKILL.md
skills/building-web-artifacts/: SKILL.md
skills/canvas-design/: SKILL.md
skills/claude-api/: SKILL.md
skills/coauthoring-docs/: SKILL.md
skills/configuring-opencode/: SKILL.md
skills/creating-algorithmic-art/: SKILL.md
skills/creating-skills/: SKILL.md
skills/creating-slack-gifs/: SKILL.md
skills/designing-canvas-art/: SKILL.md
skills/designing-frontend-interfaces/: SKILL.md
skills/designing-user-experience/: SKILL.md
skills/dispatching-parallel-agents/: SKILL.md
skills/doc-coauthoring/: SKILL.md
skills/docx/: SKILL.md
skills/executing-plans/: SKILL.md
skills/finishing-a-development-branch/: SKILL.md
skills/pdf/: SKILL.md
(+99 files in other folders)
