[project]
name = "opencode-skills"
version = "0.1.0"
description = "Python dependencies for opencode skills"
requires-python = ">=3.12"

dependencies = [
    # PDF skill
    "pdfplumber>=0.11.0",
    "pypdf>=6.0.0",
    # PDF skill + ThreatWinds MCP server
    "pypdfium2>=5.0.0",
    # slack-gif-creator skill
    "pillow>=10.0.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "numpy>=1.24.0",
    # webapp-testing skill
    "playwright>=1.40.0",
    # mcp-builder skill
    "anthropic>=0.39.0",
    # ThreatWinds Vision MCP server
    "mcp>=1.1.0",
    "pydantic>=2.13.4",
]

[tool.setuptools.packages]
find = { include = [] }

[tool.uv]
